Fixed broken styles.

--- a/public/themes/custom/suomidigi/src/scss/components/paragraph/_paragraph--attachment.scss
+++ b/public/themes/custom/suomidigi/src/scss/components/paragraph/_paragraph--attachment.scss
@@ -1,12 +1,4 @@
 .paragraph__attachment {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  @include breakpoint($for-tablet-portrait-up) {
-
-  }
-
   .paragraph__title {
     @include font-size(14px);
     @include line-height(14px, 20px);
